--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,5 +14,10 @@ jobs:
         curl "https://d1vvhvl2y92vvt.cloudfront.net/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
         unzip awscliv2.zip
         sudo ./aws/install
+    - name: see version of aws cli and ls
+      run: |
+        aws --version
+        ls
+      
         
         
