--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
     - uses: actions/checkout@v1
     - name: install aws-cli
       run: |
-        curl "https://d1vvhvl2y92vvt.cloudfront.net/awscli-exe-linux-x86_64.zip" -o "~/awscliv2.zip"
+        curl "https://d1vvhvl2y92vvt.cloudfront.net/awscli-exe-linux-x86_64.zip" -o ~/awscliv2.zip
         unzip ~/awscliv2.zip
         sudo ~/aws/install
     - name: upload files to s3 bucket
