--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,16 +11,6 @@ jobs:
     - uses: actions/checkout@v1
     - name: install aws-cli
       run: |
-        curl "https://d1vvhvl2y92vvt.cloudfront.net/awscli-exe-linux-x86_64.zip" -o ~/awscliv2.zip
-        ls ~
+        curl "https://d1vvhvl2y92vvt.cloudfront.net/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
         unzip ~/awscliv2.zip
-        sudo ~/aws/install
-    - name: upload files to s3 bucket
-      env:
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        AWS_DEFAULT_REGION: "eu-west-1"
-      run: |
-        aws s3 sync ./index.html s3://kieranallen.me
-        aws s3 sync ./style.css s3://kieranallen.me
-        aws s3 sync ./pgp.txt s3://kieranallen.me
+        ls ~
