--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,4 +13,5 @@ jobs:
       run: |
         curl "https://d1vvhvl2y92vvt.cloudfront.net/awscli-exe-linux-x86_64.zip" -o ~/awscliv2.zip
         unzip ~/awscliv2.zip -d ~
-        ls ~
+        sudo ~/aws/install
+        aws --version
