--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,12 +9,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
-    - name: install aws-cli
-      run: |
-        curl "https://d1vvhvl2y92vvt.cloudfront.net/awscli-exe-linux-x86_64.zip" -o ~/awscliv2.zip
-        unzip ~/awscliv2.zip -d ~
-        sudo ~/aws/install
-        aws --version
+    - uses: chrislennon/action-aws-cli@v1.1
+    - uses: actions/setup-node@v1
+      with:
+        node-version: '12'
+    - run: npx uglify-es ./src/script.js -o ./src/script.js -c -m
     - name: sync files
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY }}
